-
Bug
-
Resolution: Done
-
P2: Important
-
6.2.0 Beta1
-
None
-
-
d890688776853ccf0323d1278a477d791b13f248 (qt/qtmultimedia/dev) 2eebbe74617509f83e9edfc1b126cc515d5f5f03 (qt/qtmultimedia/6.2)
Starting the examples\multimedia\audiosource on Windows with Qt 6.2.0 Beta binary packages results in
ASSERT: "(len % sampleBytes) == 0" in file C:\dev\qt\dev\src\qtmultimedia\examples\multimedia\audiosource\audiosource.cpp, line 91
for me. In the call, len was 641, and sampleBytes was 2.
| For Gerrit Dashboard: QTBUG-95063 | ||||||
|---|---|---|---|---|---|---|
| # | Subject | Branch | Project | Status | CR | V |
| 374802,2 | Fix assertion in audio source example | 6.2 | qt/qtmultimedia | Status: MERGED | +2 | 0 |
| 374941,2 | Fix assertion in audio source example | dev | qt/qtmultimedia | Status: MERGED | +2 | 0 |