Fix assertion in audio source example

There is no need for the assertion. If we receive partial
samples, we can simply ignore that partial sample for the
max volume calculation.

Fixes: QTBUG-95063
Change-Id: Ia1022f87ac4f23e154fc7627ace477c07ecef55a
Reviewed-by: Assam Boudjelthia <assam.boudjelthia@qt.io>
(cherry picked from commit d890688776853ccf0323d1278a477d791b13f248)
Reviewed-by: Qt Cherry-pick Bot <cherrypick_bot@qt-project.org>